--- a/ios/Podfile
+++ b/ios/Podfile
@@ -9,7 +9,7 @@ target 'RnnIssuePlayground' do
   use_react_native!(
     :path => config[:reactNativePath],
     # to enable hermes on iOS, change `false` to `true` and then install pods
-    :hermes_enabled => false
+    :hermes_enabled => true
   )
 
   target 'RnnIssuePlaygroundTests' do
@@ -25,6 +25,6 @@ target 'RnnIssuePlayground' do
 
   post_install do |installer|
     react_native_post_install(installer)
-    __apply_Xcode_12_5_M1_post_install_workaround(installer)
+    # __apply_Xcode_12_5_M1_post_install_workaround(installer)
   end
 end
